# project7

./: Autoencoder.html  Autoencoder.ipynb  LICENSE  README.md  Transcription Factor Classifier.html  Transcription Factor Classifier.ipynb  pyproject.toml
.github/workflows/: pytest.yml
.ipynb_checkpoints/: Autoencoder-checkpoint.ipynb  Transcription Factor Classifier-checkpoint.ipynb
nn/: __init__.py  nn.py  preprocess.py
test/: test.py
